PyMaker/datas/object2/RawHTML/i10601/Python_DOC_referPages.python-syntax-error-trying-to-install-pip.txt
<div class="post-text" itemprop="text">
<p>According to its [documentation, I am trying to instal Pip running get-pip.py and I get the following error. My version of Python is 3.2.3. Any ideas of what I should do?  </p>
<pre><code>Warning (from warnings module):
  File "c:\users\ut601039\appdata\local\temp\tmpoljcda\pip.zip\pip\_vendor\pkg_resources\__init__.py", line 80
UserWarning: Support for Python 3.0-3.2 has been dropped. Future versions will fail here.
Traceback (most recent call last):
  File "D:\Programas\Python\get-pip.py", line 19177, in &lt;module&gt;
    main()
  File "D:\Programas\Python\get-pip.py", line 194, in main
    bootstrap(tmpdir=tmpdir)
  File "D:\Programas\Python\get-pip.py", line 82, in bootstrap
    import pip
  File "c:\users\ut601039\appdata\local\temp\tmpoljcda\pip.zip\pip\__init__.py", line 16, in &lt;module&gt;
  File "c:\users\ut601039\appdata\local\temp\tmpoljcda\pip.zip\pip\vcs\mercurial.py", line 9, in &lt;module&gt;
  File "c:\users\ut601039\appdata\local\temp\tmpoljcda\pip.zip\pip\download.py", line 36, in &lt;module&gt;
  File "c:\users\ut601039\appdata\local\temp\tmpoljcda\pip.zip\pip\utils\ui.py", line 15, in &lt;module&gt;
  File "c:\users\ut601039\appdata\local\temp\tmpoljcda\pip.zip\pip\_vendor\progress\bar.py", line 48
    empty_fill = u'∙'
                    ^
SyntaxError: invalid syntax
</code></pre>
</div>
<div class="post-text" itemprop="text">
<p>Python 3.2 is an old version and I <em>believe</em> past its end of life. You should be using at <em>least</em> Python 3.4, but 3.5 would be preferable.</p>
<p>The <code>u</code> prefix for strings didn't appear until Python 3.3 I believe though it may have been 3.4.</p>
</div>
<div class="post-text" itemprop="text">
<p>You are trying to install a version of pip that no longer supports Python 3.2. Support for 3.2 was <a href="https://pip.pypa.io/en/stable/news/" rel="nofollow">dropped in version 8.0.0</a>. Python 3.2 doesn't support the required <code>u'...'</code> compatibility syntax for string literals.</p>
<p>You could try to download <a href="https://pypi.python.org/pypi/pip/7.1.2" rel="nofollow">version 7.1.2</a> (download the source distribution, the <code>.tar.gz</code> link), unpack that tarball and install the package with <code>python setup.py install</code>.</p>
<p>I would, however, strongly suggest you upgrade your Python installation instead. Python 3.2 stopped receiving support in February 2016, and 3.3 (first released September 2012), 3.4 (March 2014) and 3.5 (September 2015)– have all been released before that point.</p>
</div>
<div class="post-text" itemprop="text">
<p>Try to use newest version of Python, especially when use Python 3.x.</p>
<p>In this case you use latest command and pip but use old Python. I you have to use old version, read old documentation.</p>
</div>
<span class="comment-copy">Pip lists Python 3.3 - 3.5 as supported; 3.2 is too old and missing too many features.</span>
<span class="comment-copy">Related: <a href="https://stackoverflow.com/a/38957543">Hi, I just installed requests with pip but I can't import it</a>, same syntax error.</span>
<span class="comment-copy">It was <a href="https://docs.python.org/3/reference/lexical_analysis.html#string-and-bytes-literals" rel="nofollow noreferrer">3.3</a>.</span>
<span class="comment-copy">3.3 added the <code>u'..'</code> prefix. As a result, the minimum version of Python 3.x is 3.3, see <a href="https://pypi.python.org/pypi/pip" rel="nofollow noreferrer">pypi.python.org/pypi/pip</a></span>
<span class="comment-copy">I can't install the newest version of Python right now (I don't have administrator permissions), can I get an older version of pip?</span>
<span class="comment-copy">I could install Python version 3.3 and it worked, thanks.</span>
